# RIV

TP_Reco/: CMakeLists.txt  FichierARFF.arff  FichierARFFex.arff  FichierARFFtest.arff
TP_Reco/include/: add_blank.hpp  circles.h  circles.hpp  feature_extraction.hpp  feature_size.hpp  lines.h  nb_contours.hpp  reco_barycentre.hpp  reco_lignes.hpp  rename_file.hpp  zoning.h
TP_Reco/src/: add_blank.cpp  circles.cpp  feature_extraction.cpp  feature_size.cpp  lines.cpp  main_projet.cpp  nb_contours.cpp  reco_barycentre.cpp  reco_lignes.cpp  rename_file.cpp  zoning.cpp
